# masterthesis-forkskinny

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  ForkSkinnyPlus.cbp  Makefile  README.md  SIMD_instructions.txt  bit_masks_generator.py  cmake_install.cmake  constants_generator.cpp  dump.sh  find_simd_instructions.sh  fixslice_pt_generator.py  forkskinnyplus  roundconstants_generator.cpp
contrib/: CMakeLists.txt
contrib/forkskinny-c/: LICENSE  Makefile  demo.c  forkskinny64-cipher.c
contrib/forkskinny-c/headers/: forkskinny64-cipher.h
contrib/skinny-plus/: CMakeLists.txt  Makefile  cmake_install.cmake  skinny-plus.cbp
forkskinnyplus/: main.cpp
forkskinnyplus/headers/: main.h
libs/: CMakeLists.txt
libs/forkskinny-c/: LICENSE  README.md  demo.c  forkskinny128-cipher.c  forkskinny64-cipher.c
libs/forkskinny-c/headers/: forkskinny-internal.h  forkskinny128-cipher.h  forkskinny64-cipher.h
libs/skinny-plus/: COPYING.md  internal-skinny-plus.c  internal-util.c
libs/skinny-plus/headers/: internal-skinny-plus.h  internal-util.h
reports/: assembly_comparison.md  things_i_learned.md
reports/first_semester/: christmas_holidays.md  week10.md  week2.md  week4.md  week5.md  week6.md  week7.md  week8.md  week9.md
reports/second_semester/: easter_holidays.md  tentative_schedule.md  tentative_schedule2.md  week0.md  week1.md  week10.md  week2.md  week3.md  week4.md  week5.md  week6.md  week7.md  week8.md  week9.md
reports/weekly_reports/: christmas_holidays.md  week10.md  week3.md  week4.md  week7.md  week8.md  week9.md
reports/weekly_reports/first_semester/: christmas_holidays.md  week1.md  week3.md  week4.md  week5.md  week6.md  week8.md
reports/weekly_reports/second_semester/: week0.md  week1.md  week11.md
src/: SIMD_utils.h  benchmark.cpp  config.h  constants.h  fixslice_pt_generator.py  lsfr_benchmark.cpp  main.cpp  main.h  test_vectors.h  utils.h
src/AEAD/: PAEF.h
src/avx2/tweakey-schedule/: LSFR.cpp
src/benchmarking/: benchmark.cpp  forkskinny-c-benchmarking.c  forkskinny128-benchmark-iteration.h  forkskinny128-benchmarking.cpp  forkskinny128-benchmarking.h  forkskinny64-benchmark-iteration.h  forkskinny64-benchmarking.cpp  forkskinny64-benchmarking.h  forkskinnyplus.cpp  lsfr_tk2_benchmarking.cpp  permutations_benchmark.cpp  sbox_benchmarking.cpp  shiftrows_benchmarking.cpp  test-fixslicing.cpp  test.cpp
src/benchmarking-old/: lsfr_tk2_benchmarking.cpp  permutations_benchmark.cpp  sbox_benchmarking.cpp  shiftrows_benchmarking.cpp
src/benchmarking/headers/: benchmark.h  forkskinnyplus.h  test-fixslicing.h
src/benchmarking/results/: forkskinny128-384.txt
src/forkskinny-plus/:  forkskinny-plus.cpp  forkskinny-plus.cpp  forkskinny-plus.h
src/forkskinny-plus-old/: forkskinny-plus.cpp
src/forkskinny-plus-old/headers/: forkskinny64-plus.h  slicing.h
src/forkskinny-plus-old/operations/: tk_lfsr.h  tk_permute.h
src/forkskinny-plus/128bit/: fixsliced-keyschedule128.h  forkskinny128-plus.h  run.cpp  slicing.h
src/forkskinny-plus/128bit_256_blocks/: forkskinny128-plus.h  run.cpp  slicing.h
src/forkskinny-plus/128bit_64_blocks/: fixsliced-keyschedule128.h  forkskinny128-plus.h  run.cpp
src/forkskinny-plus/128bit_accelerated/: fixsliced-keyschedule128.h  forkskinny128-plus.h
src/forkskinny-plus/64bit/: fixsliced-keyschedule.h  fixsliced-keyschedule64.h  forkskinny-plus2.cpp  forkskinny64-plus.h  run.cpp  slicing.h
src/forkskinny-plus/64bit_64_blocks/: forkskinny64_64_blocks.h  run.cpp  skinny64_64_blocks.h
src/forkskinny-plus/headers/: forkskinny-plus.h  forkskinny64-plus.h  full-state-slicing.h  half-state-slicing.h  slicing.h
src/forkskinny-plus/operations/: tk_permute.h
src/forkskinny-plus2/: forkskinny-plus2.cpp  forkskinny64-plus.h  slicing.h
src/forkskinny128-plus/: common.h  common128.h  forkskinny128.h  forkskinny128_384.h  forkskinny128_test.cpp  forkskinny64.h  run.cpp
src/forkskinny128-plus/keyschedule/: common128.h  fixsliced-keyschedule128.h  internal128.h  keyschedule-internal.h  keyschedule.h  keyschedule128-internal.h  keyschedule128.h
src/forkskinny128-plus/roundfunction/: forkskinny-addconstant.h  forkskinny-sbox.h  forkskinny128-addconstant.h  forkskinny128-mixcols.h  forkskinny128-sbox.h  forkskinny128-shiftrows.h
src/forkskinny128-plus/utils/: config.h  config128.h  constants.h  constants128.h  forkskinny-datatypes.h  forkskinny128-datatypes.h  segment_slicing128.h  slicing-accelerated.h  slicing.h  slicing128-accelerated.h  slicing128-internal.h  slicing128.h  slicing128_outsourced.h
src/forkskinny64-plus/: common.h  common64.h  forkskinny64.h  forkskinny64_64_blocks.h  forkskinny64_test.cpp  run.cpp
src/forkskinny64-plus/keyschedule/: common.h  common64.h  fixsliced-keyschedule64.h  fixsliced-permutations.h  internal.h  internal64.h  keyschedule.h  keyschedule64-internal.h  keyschedule64.h
src/forkskinny64-plus/roundfunction/: forkskinny-addconstant.h  forkskinny-mixcols.h  forkskinny-shiftrows.h  forkskinny64-addconstant.h  forkskinny64-mixcols.h  forkskinny64-sbox.h  (+3 more)
src/forkskinny_plus/: forkskinnyplus.cpp
src/headers/: LSFR.h  forkskinny64-cipher.h  full-state-slicing.h  half-state-slicing.h  main.h
src/slicing/: full-state-slicing.h  half-state-slicing.h
weekly_reports/: week0.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md  week7.md  week8.md
(+85 files in other folders)
